2011-06-22  Corey Minyard <minyard@acm.org>

	* utils.h, utils.c, controller.c, dataxfer.c: Fix some warnings
	about the write() return value not being checked.  These were
	almost all cases where a failure didn't matter (tracing), except
	for writing the pid file, where it should have been a handled
	failure.

	* dataxfer.c: Cleaned up some style issues in the UUCP locking code.

	* ser2net.c: Fixed a warning about not checking the chdir() return
	code, and added some improved logging information to syslog.

2010-03-11  Mats Erik Andersson <mats.andersson@mea.homelinux.org>,
	Corey Minyard <minyard@acm.org>

	* controller.c, dataxfer.c, utils.c, utils.h: Add IPV6 address
	compatability.

2009-11-12  Corey Minyard <minyard@acm.org>

	* ser2net.spec, ser2net.spec.in: Fix the version in the spec
	file to be updated automatically.

2009-11-12  Philip Gwyn

	* dataxfer.c, devcfg.c, devcfg.h, ser2net.8: Add the ability to
	dump trace files in a binary format with timestamps.

2009-11-03  Corey Minyard <minyard@acm.org>

	* configure.in: Move version to 2.7 for release.

2009-10-23  Corey Minyard <minyard@acm.org>

	* configure.in: Move to 2.7-rc3.

	* dataxfer.c, devcfg.c, devcfg.h, ser2net.h: Modified the tb=
	directive to work separately from tw= and tr=, so you can do all
	three at the same time independently.

	* readconfig.c: Improved an error report.
	
2009-10-22  Corey Minyard <minyard@acm.org>

	* ser2net.c: Set up routing errors to stderr before reading the
	config so config errors come out properly to stdout.

	* ser2net.8, ser2net.conf: Fix the documentation, it's tw=, not
	tw: for the tracefile stuff.

	* configure.in: Move to 2.7-rc2.

2009-10-15  Corey Minyard <minyard@acm.org>

	* dataxfer.c, devcfg.c, readconfig.c, ser2net.8, ser2net.conf: Add
	the ability to trace data read written to trace files.

2009-07-19  Geoff Simmons <gsimmons@gsimmons.org>

	* ser2net.conf: Some documentation cleanup, added missing docs
	for the timeout parameter.
